# chatgpt-prompt-engineering

./: README.md  pyproject.toml
chatgpt_prompt_engineering/: l2-guidelines.ipynb
chatgpt_prompt_engineering/.ipynb_checkpoints/: l2-guidelines-checkpoint.ipynb
