[tool.poetry]
name = "chatgpt-prompt-engineering"
version = "0.1.0"
description = ""
authors = ["Danny Siu <danny.siu@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_prompt_engineering"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
openai = "^0.27.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
